--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
  
   <display-name>Systema eSpedsg2 TVINN-SAD Application (2019-12-04)</display-name>
   <welcome-file-list>
@@ -60,6 +60,8 @@
   </servlet-mapping>
   <session-config>
     <session-timeout>60</session-timeout>
+    <!-- to avoid jsessionid in URL -->
+    <tracking-mode>COOKIE</tracking-mode>
   </session-config>
   
   <filter>  
