--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
  
  
-  <display-name>Systema eSpedsg2 TVINN-SAD Application (2020-01-09)</display-name>
+  <display-name>Systema eSpedsg2 TVINN-SAD Application (2020-01-24)</display-name>
   <welcome-file-list>
     <welcome-file>/WEB-INF/index.jsp</welcome-file>
   </welcome-file-list>
@@ -65,7 +65,7 @@
     <cookie-config>
     	  <http-only>true</http-only> 
     	  <!-- secure flag will not accept http. If we want to be able to handle both http & https the secure flag must not exist -->
-      <!-- <secure>true</secure> -->
+      <secure>true</secure>
       <!-- in seconds -->
       <max-age>1800</max-age>
     </cookie-config>
