--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
  
  
-  <display-name>Systema eSpedsg2 TVINN-SAD Application (2020-05-05)</display-name>
+  <display-name>Systema eSpedsg2 TVINN-SAD Application (2020-05-07)</display-name>
   <welcome-file-list>
     <welcome-file>/WEB-INF/index.jsp</welcome-file>
   </welcome-file-list>
@@ -102,4 +102,34 @@
 	<filter-name>XSS</filter-name>
 	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <filter>
+	<filter-name>XFRAME</filter-name>
+	<filter-class>no.systema.main.filter.XFrameHeaderFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+	<filter-name>XFRAME</filter-name>
+	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <error-page>
+    <error-code>400</error-code>
+    <location>/WEB-INF/views/error.jsp</location>
+  </error-page>
+  
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/views/error.jsp</location>
+  </error-page>
+  
+  <error-page>
+    <error-code>500</error-code>
+    <location>/WEB-INF/views/error.jsp</location>
+  </error-page>
+  
+  <error-page>
+    <location>/WEB-INF/views/error.jsp</location>
+</error-page>
+  
 </web-app>
