--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
  
  
-  <display-name>Systema eSpedsg2 TVINN-SAD Application (2021-01-19 96ba35436cd44ae31432a7db1cd3af6947f9ee0c)</display-name>
+  <display-name>Systema eSpedsg2 TVINN-SAD Application (2021-01-19)</display-name>
   <welcome-file-list>
     <welcome-file>/WEB-INF/index.jsp</welcome-file>
   </welcome-file-list>
